Added example names for missing people list and a skeleton for the layout of missing people list.

--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Feb 13 23:42:26 EST 2016
-sdk.dir=C\:\\Users\\Goldie\\AppData\\Local\\Android\\sdk
+#Sun Feb 14 00:50:45 EST 2016
+sdk.dir=/Users/avigailfohrman/Library/Android/sdk
